2002-05-12  Alexander Larsson  <alla@lysator.liu.se>

	* src/file-manager/fm-directory-view.c
	(clipboard_targets_received, real_update_menus):
	Make sure to keep a ref to the view until we got the response.
	Handle the case the detail->ui was destroyed (it's a weak ref).

2002-05-10  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-directory-view.c (process_new_files): Handle
	files that are moved/removed and not ready.

2002-05-11  Alex Larsson  <alexl@redhat.com>

	* components/music/nautilus-music-view.c: (set_up_tree_view):
	Don't use custom font.
	
	* libnautilus-private/apps_nautilus_preferences.schemas:
	Add preferences/desktop_font.
	Remove old fonts keys
	
	* libnautilus-private/nautilus-file.c:
	(nautilus_file_get_display_name_nocopy):
	Don't leak.
	
	* libnautilus-private/nautilus-global-preferences.c:
	* libnautilus-private/nautilus-global-preferences.h:
	Remove old font prefs. Add desktop font prefs.
	
	* libnautilus-private/nautilus-icon-canvas-item.c:
	(create_label_layout):
	Use default widget font unless one is set.
	
	* libnautilus-private/nautilus-icon-container.c: (finalize),
	(style_set), (nautilus_icon_container_class_init),
	(nautilus_icon_container_instance_init),
	(nautilus_icon_container_set_font):
	* libnautilus-private/nautilus-icon-container.h:
 	* libnautilus-private/nautilus-icon-private.h:
	Change nautilus_icon_container_set_font_name to
	nautilus_icon_container_set_font.
	Change font_size_table to have the difference from the base font size.
	Invalidate labels on style_set.
	
	* libnautilus-private/nautilus-icon-factory.c:
	(embedded_text_font_changed_callback), (embed_text):
	Use default widget font for embedded text.
	
	* src/nautilus-preferences-dialog.c:
	* src/nautilus-sidebar-title.c:
	Remove font prefs. Update on style_set.
	
	* src/nautilus-sidebar-tabs.c: (nautilus_sidebar_tabs_class_init),
	(nautilus_sidebar_tabs_load_theme_data), (style_set),
	(nautilus_sidebar_tabs_init), (nautilus_sidebar_tabs_destroy),