@@ -1,3 +1,9 @@
+2002-05-12  Dave Camp  <dave@ximian.com>
+
+	* libnautilus-private/nautilus-global-preferences.c:
+	* src/nautilus-bookmarks-window.c: (create_bookmarks_window):
+	* src/nautilus-preferences-dialog.c: Added mnemonics.
+
 2002-05-12  Alexander Larsson  <alla@lysator.liu.se>
 
 	* src/file-manager/fm-directory-view.c
